# open-cwm

./: .gitignore  README.md  pyproject.toml
ci/: Makefile  pipeline.yaml
orchestrator/: __init__.py  catalog.py  models.py  pipeline.py  run.py  utils.py
repo_catalog/: repos.yaml
schemas/: env_manifest.schema.json  repo_image_manifest.schema.json  test_index.schema.json
tests/: test_catalog.py  test_pipeline_helpers.py
